# AaltoASR-online-demo

./: .cproject  .cvsignore  .gitignore  .project  Adapter.cc  Adapter.hh  Application.cc  Application.hh  AudioFileInputController.cc  AudioFileInputController.hh  AudioIOStream.hh  AudioInput.cc  AudioInput.hh  AudioInputController(COPY).hh  AudioInputController.cc  AudioInputController.hh  AudioInputStream.cc  AudioInputStream.hh  AudioLineInputController.cc  AudioLineInputController.hh  AudioOutputStream.cc  AudioOutputStream.hh  AudioStream(NEW).cc  AudioStream(NEW).hh  AudioStream(OLD).cc  AudioStream(OLD).hh  AudioStream.cc  AudioStream.hh  Buffer.cc  Buffer.hh  CMakeLists.txt  Decoder.cc  Decoder.hh  Doxyfile  Exception.hh  FileOutput.cc  FileOutput.hh  INSTALLATION.md  Makefile  OutQueueController.cc  (+118 more)
Documentation/: communication.txt
cmake/Modules/: FindAaltoASR.cmake  FindPortaudio.cmake  FindSigC++.cmake
common/: .gitignore  CMakeLists.txt  Process.hh  msg.cc  msg.hh
data/: CMakeLists.txt  make_new_package.sh
decoder/: CMakeLists.txt  Decoder.cc  Decoder.hh  decoder.cc
demogui/: .gitignore  Application.cc  Application.hh  AudioInputController.cc  AudioInputController.hh  AudioStream.cc  AudioStream.hh  Buffer.cc  Buffer.hh  CMakeLists.txt  Exception.hh  RecognizerProcess.cc  WidgetContainer.cc  WidgetMultiLineEdit.hh  WidgetRecognitionArea.cc  WidgetRecognitionArea.hh  WidgetRecognitionText.cc  WidgetScrollArea.cc  WidgetScrollBar.hh  WidgetSpectrogram.cc  WidgetStatus.cc  WidgetTimeAxis.hh  WidgetWave.cc  WidgetWave.hh  Window.cc  Window.hh  WindowChild.hh  WindowComparison.cc  WindowComparison.hh  WindowFile.cc  WindowMessageBox.hh  WindowOpenAudioFile.hh  WindowOpenFile.hh  WindowRecognizer.cc  WindowSaveAudioFile.hh  WindowSaveTextFile.hh  WindowSettings.cc  comparison.cc  comparison.hh  demogui.cc  (+1 more)
recognizer/: .gitignore  Adapter.cc  Adapter.hh  CMakeLists.txt  Recognizer.hh  recognizer.cc
scripts/: CMakeLists.txt  config  demo.sh  demo_ada.sh  demo_eng_20k.sh  demo_eng_5k.sh  demo_eng_5k_finglish.sh  hammas.sh  rec.sh  rec_ada.sh  rec_eng_20k.sh  rec_eng_5k.sh  rec_eng_5k_finglish.sh  rec_hammas.sh  sample_config  startdemo
